fix: missing gap on mobile store grid

--- a/web/src/components/product/product-preview-grid.module.css
+++ b/web/src/components/product/product-preview-grid.module.css
@@ -7,9 +7,9 @@
 .wrapper {
   margin: 0.325rem 0 0.325rem;
   
-  /* @nest & > div:not(:first-child) {
+  @nest & > div:not(:first-child) {
     margin-left: 5px !important;
-  } */
+  }
   
   @media (--media-max-small) {
     margin: 0.325rem 0 0.625rem;
